[4강] Stream 추가 함수